# wireup

./: .gitignore  CNAME  Dockerfile  README.md  docker-compose.yml  package-lock.json  pyproject.toml
backend/: main.py
backend/src/api/: auth.py  question.py  template.py  test.py
backend/src/database/: collections.py  mongo.py  singletons.py
frontend/: Dockerfile  next.config.js  package-lock.json  package.json
frontend/api/: api.js
frontend/api/auth/: auth.service.js
frontend/api/templates/: template.service.js
frontend/api/tests/: test.service.js
frontend/components/DeleteButton/: DeleteButton.js
frontend/components/add_button/: AddButton.js
frontend/components/auth/: AuthForm.js
frontend/components/back_button/: BackButton.js
frontend/components/copy_button/: CopyButton.js
frontend/components/delete_modal/: DeleteModal.js
frontend/components/edit_button/: edit.js
frontend/components/export_button/: ExportButton.js
frontend/components/header/: Header.js
frontend/components/loader/: loader.js
frontend/components/start_button/: StartButton.js
frontend/hooks/: useTemplateData.js  useTemplateForm.js
frontend/pages/: 404.js  _app.js  _document.js  _error.js  index.js  test.js
frontend/styles/: add_button.css  auth.css  back_button.css  copy_button.css  delete_button.css  edit_button.css  global.css  loader.css  option.css  question.css  start_button.css  submission.css
frontend/utils/: AuthProvider.js  ProtectedRoute.js  api.js  constants.js
src/api/: main.py
src/api/routes/: auth.py  (+3 more)
src/database/: collections.py  mongo.py
(+33 files in other folders)
