[tool.poetry]
name = "wireup"
version = "0.1.0"
description = ""
authors = ["User <dimitar.pavlovski12@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.12"
uvicorn = "^0.34.0"
dotenv = "^0.9.9"
motor = "^3.7.0"
pymongo = "^4.11.3"
passlib = "^1.7.4"
pyjwt = "==2.10.1"
bcrypt = "^4.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
