[tool.poetry]
name = "wireup"
version = "0.1.0"
description = ""
authors = ["User <dimitar.pavlovski12@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = "^0.34.1"
dotenv = "^0.9.9"
motor = "^3.7.0"
pymongo = "^4.12.0"
pyjwt = "==2.10.1"
bcrypt = "^4.3.0"
typing-extensions = "==4.13.2"
pydantic-core = "==2.33.1"
passlib = "^1.7.4"
poetry-core = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
